--- a/animators/animators.html
+++ b/animators/animators.html
@@ -282,7 +282,7 @@
                             <div class="section__personage-circle-outer">
                                 <div class="section__personage-mask">
                                     <div class="section__personage-circle">
-                                        <img src="/cleanback/img/2.png" alt="">
+                                        <img src="img/personage.png" alt="">
                                     </div>
                                 </div>
                             </div>
@@ -296,7 +296,7 @@
                             <div class="section__personage-circle-outer">
                                 <div class="section__personage-mask">
                                     <div class="section__personage-circle">
-                                        <img src="/cleanback/img/2.png" alt="">
+                                        <img src="img/personage.png" alt="">
                                     </div>
                                 </div>
                             </div>
@@ -310,7 +310,7 @@
                             <div class="section__personage-circle-outer">
                                 <div class="section__personage-mask">
                                     <div class="section__personage-circle">
-                                        <img src="/cleanback/img/2.png" alt="">
+                                        <img src="img/personage.png" alt="">
                                     </div>
                                 </div>
                             </div>
