--- a/animators/online.html
+++ b/animators/online.html
@@ -361,7 +361,7 @@
                             <div class="section__personage-circle-outer">
                                 <div class="section__personage-mask">
                                     <div class="section__personage-circle">
-                                        <img src="/cleanback/img/2.png" alt="">
+                                        <img src="img/personage.png" alt="">
                                     </div>
                                 </div>
                             </div>
@@ -375,7 +375,7 @@
                             <div class="section__personage-circle-outer">
                                 <div class="section__personage-mask">
                                     <div class="section__personage-circle">
-                                        <img src="/cleanback/img/2.png" alt="">
+                                        <img src="img/personage.png" alt="">
                                     </div>
                                 </div>
                             </div>
@@ -389,7 +389,7 @@
                             <div class="section__personage-circle-outer">
                                 <div class="section__personage-mask">
                                     <div class="section__personage-circle">
-                                        <img src="/cleanback/img/2.png" alt="">
+                                        <img src="img/personage.png" alt="">
                                     </div>
                                 </div>
                             </div>
@@ -403,7 +403,7 @@
                             <div class="section__personage-circle-outer">
                                 <div class="section__personage-mask">
                                     <div class="section__personage-circle">
-                                        <img src="/cleanback/img/2.png" alt="">
+                                        <img src="img/personage.png" alt="">
                                     </div>
                                 </div>
                             </div>
@@ -417,7 +417,7 @@
                             <div class="section__personage-circle-outer">
                                 <div class="section__personage-mask">
                                     <div class="section__personage-circle">
-                                        <img src="/cleanback/img/2.png" alt="">
+                                        <img src="img/personage.png" alt="">
                                     </div>
                                 </div>
                             </div>
@@ -431,7 +431,7 @@
                             <div class="section__personage-circle-outer">
                                 <div class="section__personage-mask">
                                     <div class="section__personage-circle">
-                                        <img src="/cleanback/img/2.png" alt="">
+                                        <img src="img/personage.png" alt="">
                                     </div>
                                 </div>
                             </div>
@@ -446,7 +446,7 @@
                             <div class="section__personage-circle-outer">
                                 <div class="section__personage-mask">
                                     <div class="section__personage-circle">
-                                        <img src="/cleanback/img/2.png" alt="">
+                                        <img src="img/personage.png" alt="">
                                     </div>
                                 </div>
                             </div>
@@ -460,7 +460,7 @@
                             <div class="section__personage-circle-outer">
                                 <div class="section__personage-mask">
                                     <div class="section__personage-circle">
-                                        <img src="/cleanback/img/2.png" alt="">
+                                        <img src="img/personage.png" alt="">
                                     </div>
                                 </div>
                             </div>
@@ -474,7 +474,7 @@
                             <div class="section__personage-circle-outer">
                                 <div class="section__personage-mask">
                                     <div class="section__personage-circle">
-                                        <img src="/cleanback/img/2.png" alt="">
+                                        <img src="img/personage.png" alt="">
                                     </div>
                                 </div>
                             </div>
