--- a/animators/index.html
+++ b/animators/index.html
@@ -303,7 +303,7 @@
                                 <div class="section__personage-circle-outer">
                                     <div class="section__personage-mask">
                                         <div class="section__personage-circle">
-                                            <img src="/cleanback/img/2.png" alt="">
+                                            <img src="img/personage.png" alt="">
                                         </div>
                                     </div>
                                 </div>
@@ -317,7 +317,7 @@
                                 <div class="section__personage-circle-outer">
                                     <div class="section__personage-mask">
                                         <div class="section__personage-circle">
-                                            <img src="/cleanback/img/2.png" alt="">
+                                            <img src="img/personage.png" alt="">
                                         </div>
                                     </div>
                                 </div>
@@ -331,7 +331,7 @@
                                 <div class="section__personage-circle-outer">
                                     <div class="section__personage-mask">
                                         <div class="section__personage-circle">
-                                            <img src="/cleanback/img/2.png" alt="">
+                                            <img src="img/personage.png" alt="">
                                         </div>
                                     </div>
                                 </div>
@@ -345,7 +345,7 @@
                                 <div class="section__personage-circle-outer">
                                     <div class="section__personage-mask">
                                         <div class="section__personage-circle">
-                                            <img src="/cleanback/img/2.png" alt="">
+                                            <img src="img/personage.png" alt="">
                                         </div>
                                     </div>
                                 </div>
@@ -359,7 +359,7 @@
                                 <div class="section__personage-circle-outer">
                                     <div class="section__personage-mask">
                                         <div class="section__personage-circle">
-                                            <img src="/cleanback/img/2.png" alt="">
+                                            <img src="img/personage.png" alt="">
                                         </div>
                                     </div>
                                 </div>
@@ -373,7 +373,7 @@
                                 <div class="section__personage-circle-outer">
                                     <div class="section__personage-mask">
                                         <div class="section__personage-circle">
-                                            <img src="/cleanback/img/2.png" alt="">
+                                            <img src="img/personage.png" alt="">
                                         </div>
                                     </div>
                                 </div>
@@ -388,7 +388,7 @@
                                 <div class="section__personage-circle-outer">
                                     <div class="section__personage-mask">
                                         <div class="section__personage-circle">
-                                            <img src="/cleanback/img/2.png" alt="">
+                                            <img src="img/personage.png" alt="">
                                         </div>
                                     </div>
                                 </div>
@@ -402,7 +402,7 @@
                                 <div class="section__personage-circle-outer">
                                     <div class="section__personage-mask">
                                         <div class="section__personage-circle">
-                                            <img src="/cleanback/img/2.png" alt="">
+                                            <img src="img/personage.png" alt="">
                                         </div>
                                     </div>
                                 </div>
@@ -416,7 +416,7 @@
                                 <div class="section__personage-circle-outer">
                                     <div class="section__personage-mask">
                                         <div class="section__personage-circle">
-                                            <img src="/cleanback/img/2.png" alt="">
+                                            <img src="img/personage.png" alt="">
                                         </div>
                                     </div>
                                 </div>
