--- a/animators/persomages.html
+++ b/animators/persomages.html
@@ -103,7 +103,7 @@
                             <div class="section__personage-circle-outer">
                                 <div class="section__personage-mask">
                                     <div class="section__personage-circle">
-                                        <img src="/cleanback/img/2.png" alt="">
+                                        <img src="img/personage.png" alt="">
                                     </div>
                                 </div>
                             </div>
@@ -117,7 +117,7 @@
                             <div class="section__personage-circle-outer">
                                 <div class="section__personage-mask">
                                     <div class="section__personage-circle">
-                                        <img src="/cleanback/img/2.png" alt="">
+                                        <img src="img/personage.png" alt="">
                                     </div>
                                 </div>
                             </div>
@@ -131,7 +131,7 @@
                             <div class="section__personage-circle-outer">
                                 <div class="section__personage-mask">
                                     <div class="section__personage-circle">
-                                        <img src="/cleanback/img/2.png" alt="">
+                                        <img src="img/personage.png" alt="">
                                     </div>
                                 </div>
                             </div>
@@ -145,7 +145,7 @@
                             <div class="section__personage-circle-outer">
                                 <div class="section__personage-mask">
                                     <div class="section__personage-circle">
-                                        <img src="/cleanback/img/2.png" alt="">
+                                        <img src="img/personage.png" alt="">
                                     </div>
                                 </div>
                             </div>
@@ -159,7 +159,7 @@
                             <div class="section__personage-circle-outer">
                                 <div class="section__personage-mask">
                                     <div class="section__personage-circle">
-                                        <img src="/cleanback/img/2.png" alt="">
+                                        <img src="img/personage.png" alt="">
                                     </div>
                                 </div>
                             </div>
@@ -173,7 +173,7 @@
                             <div class="section__personage-circle-outer">
                                 <div class="section__personage-mask">
                                     <div class="section__personage-circle">
-                                        <img src="/cleanback/img/2.png" alt="">
+                                        <img src="img/personage.png" alt="">
                                     </div>
                                 </div>
                             </div>
@@ -188,7 +188,7 @@
                             <div class="section__personage-circle-outer">
                                 <div class="section__personage-mask">
                                     <div class="section__personage-circle">
-                                        <img src="/cleanback/img/2.png" alt="">
+                                        <img src="img/personage.png" alt="">
                                     </div>
                                 </div>
                             </div>
@@ -202,7 +202,7 @@
                             <div class="section__personage-circle-outer">
                                 <div class="section__personage-mask">
                                     <div class="section__personage-circle">
-                                        <img src="/cleanback/img/2.png" alt="">
+                                        <img src="img/personage.png" alt="">
                                     </div>
                                 </div>
                             </div>
@@ -216,7 +216,7 @@
                             <div class="section__personage-circle-outer">
                                 <div class="section__personage-mask">
                                     <div class="section__personage-circle">
-                                        <img src="/cleanback/img/2.png" alt="">
+                                        <img src="img/personage.png" alt="">
                                     </div>
                                 </div>
                             </div>
