--- a/animators/index.html
+++ b/animators/index.html
@@ -1303,7 +1303,7 @@
             <img src="img/popup__hat.png" alt="Фон" class="popup__hat">
             <a href="#" class="popup__close"><i class="fa fa-times"></i></a>
             <div class="section__title">
-                <div class="section__titles violet">
+                <div class="section__titles white">
                     <img class="section__title-bg section__drop section__drop-l" src="img/drop-l.png" alt="Фон">
                     <h2>Спасибо за заказ!</h2>
                     <img class="section__title-bg section__drop section__drop-r" src="img/drop-r.png" alt="Фон">
